@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Map>
+<Map version="0.1">
 	<Width>400</Width>
 	<Height>400</Height>
 	<Extents>-120,12,-82,34</Extents>
